[project]
name = "zpic"
version = "0.1.0"
description = "A fork of the https://github.com/zpic-plasma/zpic project which attempts to integrate the python functionality as a standalone pip package for convenience"
authors = [
    {name = "Ricardo Teixeira", email = "ricardo.a.teixeira@tecnico.ulisboa.pt"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "ipython (==8.37.0)",
    "scipy (==1.15.3)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "jupyterlab (>=4.4.7,<5.0.0)",
    "cython (>=3.1.3,<4.0.0)",
    "ipympl (>=0.9.7,<0.10.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"

[tool.poetry]
packages = [{include = "zpic", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.cibuildwheel]
before-all = "pip install cython setuptools && cd python/source && python setup.py build_ext --build-lib=../lib && tree -L 3"